Add 7 more CNN Newsource stations - now 39 stations across 27 states + D.C.
- Added WECT Wilmington (NC) - Row 12
- Added WHSV Harrisonburg (VA) - 2nd VA station - Row 12
- Added WSMV Nashville (TN) - new state - Row 12
- Added WDAM Moselle (MS) - new state - Row 13
- Added WLOX Biloxi (MS) - 2nd MS station - Row 13
- Added WTVM Columbus (GA) - 4th GA station - Row 13
- Added WALB Albany (GA) - 5th GA station - Row 14
- Updated map to 39 markers across 27 states + D.C.
- Updated all stats bars and banners

--- a/cnn-hits.html
+++ b/cnn-hits.html
@@ -55,7 +55,7 @@
         <!-- CNN Coverage Map Banner -->
         <div style="background: linear-gradient(135deg, #cc0000, #990000); border-radius: 10px; padding: 25px; margin-bottom: 30px; text-align: center; color: white;">
             <h2 style="color: white; border: none; padding: 0; margin: 0 0 8px 0; font-size: 1.6rem;">🗺️ CNN Newsource National Coverage Map</h2>
-            <p style="margin: 0 0 15px 0; font-size: 1rem; opacity: 0.9;">32 TV stations · 23 states + D.C. · February 18, 2026</p>
+            <p style="margin: 0 0 15px 0; font-size: 1rem; opacity: 0.9;">39 TV stations · 27 states + D.C. · February 18, 2026</p>
             <a href="cnn-map.html" style="display: inline-block; background-color: white; color: #cc0000; padding: 12px 30px; border-radius: 6px; font-weight: bold; font-size: 1rem; text-decoration: none; border: none; transition: background-color 0.3s;">
                 📍 View Interactive Map →
             </a>
@@ -527,6 +527,96 @@
                         <p style="margin: 0; font-size: 0.75rem; color: #0c5460;">
                             <strong>CNN Reach:</strong> Sioux City, IA station brings Smart Underwear research to Siouxland audience via CNN Newsource.
                         </p>
+                    </div>
+                </div>
+            </div>
+        <!-- CNN News Service Stories in 3 columns (Row 12) -->
+            <div style="display: flex; gap: 20px; align-items: stretch; margin-bottom: 20px;">
+                <!-- WECT Wilmington -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WECT Wilmington</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Wilmington, NC station brings Smart Underwear research to coastal North Carolina audience via CNN Newsource.</p>
+                    </div>
+                </div>
+                <!-- WHSV Harrisonburg -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WHSV Harrisonburg</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Harrisonburg, VA station brings Smart Underwear research to Shenandoah Valley audience via CNN Newsource.</p>
+                    </div>
+                </div>
+                <!-- WSMV Nashville -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WSMV Nashville</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Nashville, TN station brings Smart Underwear research to Tennessee audience via CNN Newsource.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CNN News Service Stories in 3 columns (Row 13) -->
+            <div style="display: flex; gap: 20px; align-items: stretch; margin-bottom: 20px;">
+                <!-- WDAM Moselle -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WDAM Moselle</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Moselle, MS station brings Smart Underwear research to Mississippi audience via CNN Newsource.</p>
+                    </div>
+                </div>
+                <!-- WLOX Biloxi -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WLOX Biloxi</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Biloxi, MS station brings Smart Underwear research to Mississippi Gulf Coast audience via CNN Newsource.</p>
+                    </div>
+                </div>
+                <!-- WTVM Columbus -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WTVM Columbus</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Columbus, GA station brings Smart Underwear research to west Georgia audience via CNN Newsource.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CNN News Service Stories in 3 columns (Row 14) -->
+            <div style="display: flex; gap: 20px; align-items: stretch; margin-bottom: 20px;">
+                <!-- WALB Albany -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 WALB Albany</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Albany, GA station brings Smart Underwear research to southwest Georgia audience via CNN Newsource.</p>
+                    </div>
+                </div>
+                <!-- Placeholder -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px dashed #ccc; display: flex; align-items: center; justify-content: center;">
+                    <div style="text-align: center; color: #999;">
+                        <p style="margin: 0; font-size: 1.2rem;">📺</p>
+                        <p style="margin: 5px 0; font-size: 0.9rem;">Coming Soon</p>
+                        <p style="margin: 0; font-size: 0.8rem;">CNN Station</p>
+                    </div>
+                </div>
+                <!-- Placeholder -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px dashed #ccc; display: flex; align-items: center; justify-content: center;">
+                    <div style="text-align: center; color: #999;">
+                        <p style="margin: 0; font-size: 1.2rem;">📺</p>
+                        <p style="margin: 5px 0; font-size: 0.9rem;">Coming Soon</p>
+                        <p style="margin: 0; font-size: 0.8rem;">CNN Station</p>
                     </div>
                 </div>
             </div>
