--- a/cnn-map.html
+++ b/cnn-map.html
@@ -87,11 +87,11 @@
 
         <div class="stats-bar">
             <div class="stat-box">
-                <span class="number">32</span>
+                <span class="number">39</span>
                 <span class="label">TV Stations</span>
             </div>
             <div class="stat-box">
-                <span class="number">23</span>
+                <span class="number">27</span>
                 <span class="label">States + D.C.</span>
             </div>
             <div class="stat-box">
@@ -144,7 +144,14 @@
             { name: "WAFF Huntsville", city: "Huntsville, AL", lat: 34.7304, lng: -86.5861, url: "https://www.waff.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "WLUC TV6 Upper Michigan", city: "Negaunee, MI", lat: 46.4997, lng: -87.6128, url: "https://www.uppermichiganssource.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "KSWO Lawton", city: "Lawton, OK", lat: 34.6036, lng: -98.3959, url: "https://www.kswo.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
-            { name: "KTIV Sioux City", city: "Sioux City, IA", lat: 42.4999, lng: -96.4003, url: "https://www.ktiv.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" }
+            { name: "KTIV Sioux City", city: "Sioux City, IA", lat: 42.4999, lng: -96.4003, url: "https://www.ktiv.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WECT Wilmington", city: "Wilmington, NC", lat: 34.2257, lng: -77.9447, url: "https://www.wect.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WHSV Harrisonburg", city: "Harrisonburg, VA", lat: 38.4496, lng: -78.8689, url: "https://www.whsv.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WSMV Nashville", city: "Nashville, TN", lat: 36.1627, lng: -86.7816, url: "https://www.wsmv.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WDAM Moselle", city: "Moselle, MS", lat: 31.5021, lng: -89.4195, url: "https://www.wdam.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WLOX Biloxi", city: "Biloxi, MS", lat: 30.3960, lng: -88.8853, url: "https://www.wlox.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WTVM Columbus", city: "Columbus, GA", lat: 32.4610, lng: -84.9877, url: "https://www.wtvm.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WALB Albany", city: "Albany, GA", lat: 31.5785, lng: -84.1557, url: "https://www.walb.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" }
         ];
 
         // Initialize map centered on continental US
@@ -172,7 +179,7 @@
                 <div style="font-family:Helvetica,sans-serif; min-width:180px;">
                     <strong style="color:#cc0000; font-size:1rem;">📺 ${s.name}</strong><br>
                     <span style="color:#666; font-size:0.85rem;">${s.city}</span><br>
-                    <span style="color:#666; font-size:0.8rem;">32 TV stations · 23 states + D.C. · February 18, 2026 · CNN Newsource</span><br><br>
+                    <span style="color:#666; font-size:0.8rem;">39 TV stations · 27 states + D.C. · February 18, 2026 · CNN Newsource</span><br><br>
                     <a href="${s.url}" target="_blank" style="color:#cc0000; font-weight:bold; font-size:0.85rem;">▶ Watch Story →</a>
                 </div>
             `);
