Fix Nautilus lede to use actual article lede instead of description
- Changed from description to real lede: 'It's giving researchers insights into the microbiome—and you can help'
- Maintains consistency with site rule of using actual article ledes in italics

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
                 
                 <div style="font-style: italic; color: #333; font-size: 0.9rem; line-height: 1.5; text-align: left;">
-                    <p style="margin: 0;">"Science magazine explores the groundbreaking Smart Underwear research, highlighting how the device offers a window into gut microbiome activity and the serious scientific implications of measuring human flatulence patterns in daily life."</p>
+                    <p style="margin: 0;">"It's giving researchers insights into the microbiome—and you can help"</p>
                 </div>
             </div>
             
