Fix Nautilus lede to use actual article lede instead of subtitle
- Changed index.html lede from subtitle to actual lede: 'We've got smart rings, smart watches, and now … smart underwear.'
- Created dedicated Nautilus article in knowledge-base with correct lede/subtitle distinction
- Fixed Scientific American article file in knowledge base
- Maintains consistency with site rule of using actual article ledes in italics

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
                 
                 <div style="font-style: italic; color: #333; font-size: 0.9rem; line-height: 1.5; text-align: left;">
-                    <p style="margin: 0;">"It's giving researchers insights into the microbiome—and you can help"</p>
+                    <p style="margin: 0;">"We've got smart rings, smart watches, and now … smart underwear."</p>
                 </div>
             </div>
             
