Fix Nautilus author attribution
- Changed author from 'Nautilus Staff' to 'By Jake Currie' on index.html
- Knowledge base already had correct author and date
- Maintains accurate attribution for the article

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <div style="background-color: #f8f9fa; padding: 25px; border-radius: 8px; margin-bottom: 20px; border: 2px solid #1a5490;">
                 <h3 style="color: #1a5490; margin-top: 0; font-size: 1.5rem; font-weight: bold;">🧭 Nautilus</h3>
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 5px;">February 11, 2026</p>
-                <p style="color: #666; font-size: 0.8rem; margin-bottom: 10px;">Nautilus Staff</p>
+                <p style="color: #666; font-size: 0.8rem; margin-bottom: 10px;">By Jake Currie</p>
                 
                 <div style="background-color: #e8f0fe; padding: 10px; border-radius: 4px; margin-bottom: 15px; border-left: 3px solid #1a5490;">
                     <strong><a href="https://nautil.us/new-smart-underwear-unlocks-the-serious-science-of-human-flatulence-1267183/" target="_blank" style="font-size: 1.1rem; color: #1a5490;">New Smart Underwear Unlocks the Serious Science of Human Flatulence</a></strong>
