Fix Everyday Health lede to use actual article first paragraph
- Changed from summary to real lede: 'But if you're prone to flatulence or are just going through a distressingly gassy period, you may wonder: How much farting is typical?'
- Added Everyday Health article to knowledge base
- Maintains consistency with site rule of using actual article ledes in italics

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div>
                     
                     <div style="font-style: italic; color: #333; font-size: 0.8rem; line-height: 1.4;">
-                        <p style="margin: 0;">"Researchers determined that people fart an average of 32 times a day, twice as much as previously thought. This knowledge could enhance our understanding of the gut microbiome in ways that go beyond flatulence."</p>
+                        <p style="margin: 0;">"But if you're prone to flatulence or are just going through a distressingly gassy period, you may wonder: How much farting is typical?"</p>
                     </div>
                 </div>
             </div>
