Add WRIF Detroit as Local Twist with rock radio humor
- Added WRIF Detroit to media-coverage.csv as Local Radio
- Added to local-twists.html with 'men's underwear variety' comedy angle
- Added to interactive map as orange marker (Local Twist)
- Updated counts: 49 total stations, 11 Local Twists
- WRIF brings Detroit rock radio personality to Smart Underwear coverage
- Author: Cort Freeman with fashion commentary twist

--- a/cnn-map.html
+++ b/cnn-map.html
@@ -87,7 +87,7 @@
 
         <div class="stats-bar">
             <div class="stat-box">
-                <span class="number">48</span>
+                <span class="number">49</span>
                 <span class="label">TV Stations</span>
             </div>
             <div class="stat-box">
@@ -114,7 +114,7 @@
             </div>
             <div style="display: flex; align-items: center; gap: 8px;">
                 <div style="background-color: #ff6b6b; width: 12px; height: 12px; border-radius: 50%; border: 2px solid white; box-shadow: 0 0 3px rgba(0,0,0,0.3);"></div>
-                <span style="font-size: 0.85rem; color: #333;">Local Twists (10 stations)</span>
+                <span style="font-size: 0.85rem; color: #333;">Local Twists (11 stations)</span>
             </div>
         </div>
 
@@ -174,7 +174,8 @@
             { name: "Valley Vanguard SVSU", city: "Saginaw, MI", lat: 43.4194, lng: -84.0775, url: "https://www.valleyvanguardonline.com/smart-underwear-study-shows-people-fart-more-than-they-admit/" },
             { name: "10News San Diego", city: "San Diego, CA", lat: 32.7157, lng: -117.1611, url: "https://www.10news.com/news/fact-or-fiction/fact-or-fiction-scientists-design-smart-underwear-to-track-flatulence" },
             { name: "The Georgia Sun", city: "Georgia", lat: 32.1656, lng: -82.9001, url: "https://thegeorgiasun.com/health/researchers-in-maryland-create-smart-underwear-to-find-out-how-much-you-fart" },
-            { name: "WTOL Toledo", city: "Toledo, OH", lat: 41.6528, lng: -83.5379, url: "https://www.wtol.com/video/news/weird/smarty-pants-researchers-develop-intelligent-underwear-to-measure-your-farts/512-f3cd54d7-8f65-4c51-a5d4-67b5fd9f5faa" }
+            { name: "WTOL Toledo", city: "Toledo, OH", lat: 41.6528, lng: -83.5379, url: "https://www.wtol.com/video/news/weird/smarty-pants-researchers-develop-intelligent-underwear-to-measure-your-farts/512-f3cd54d7-8f65-4c51-a5d4-67b5fd9f5faa" },
+            { name: "WRIF Detroit", city: "Detroit, MI", lat: 42.3314, lng: -83.0458, url: "https://wrif.com/2026/02/11/scientists-develop-smart-underwear-that-tracks-bacteria-by-measuring-farts/" }
         ];
 
         // Initialize map centered on continental US
