Add LinkedIn video integration and expand CNN coverage to 51 stations
Major Updates:
- Added Christopher Mims LinkedIn video to WSJ section in 2-column format
- Added Fox 8 Live New Orleans and KOLO Reno to CNN Newsource coverage
- Updated CNN map with 2 new stations (51 total, 41 CNN stations)
- Updated CNN hits page with new station entries
- Added LinkedIn video to media coverage database
- Implemented matching badge style for 'Log Into LinkedIn'
- Enhanced WSJ section with author video follow-up

CNN Coverage Expansion:
- Fox 8 Live New Orleans: Gulf Coast market coverage
- KOLO Reno: Nevada market coverage
- Updated station counts: 51 TV stations, 31 states + D.C.
- Interactive map now includes all 51 stations

Design Improvements:
- 2-column layout for WSJ + LinkedIn video
- Consistent badge styling across all site elements
- Professional LinkedIn integration with login badge
- Enhanced multimedia presentation

--- a/cnn-hits.html
+++ b/cnn-hits.html
@@ -55,7 +55,7 @@
         <!-- CNN Coverage Map Banner -->
         <div style="background: linear-gradient(135deg, #cc0000, #990000); border-radius: 10px; padding: 25px; margin-bottom: 30px; text-align: center; color: white;">
             <h2 style="color: white; border: none; padding: 0; margin: 0 0 8px 0; font-size: 1.6rem;">🗺️ CNN Newsource National Coverage Map</h2>
-            <p style="margin: 0 0 15px 0; font-size: 1rem; opacity: 0.9;">49 TV stations · 31 states + D.C. · February 18, 2026</p>
+            <p style="margin: 0 0 15px 0; font-size: 1rem; opacity: 0.9;">51 TV stations · 31 states + D.C. · February 18, 2026</p>
             <a href="cnn-map.html" style="display: inline-block; background-color: white; color: #cc0000; padding: 12px 30px; border-radius: 6px; font-weight: bold; font-size: 1rem; text-decoration: none; border: none; transition: background-color 0.3s;">
                 📍 View Interactive Map →
             </a>
@@ -603,20 +603,22 @@
                         <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Albany, GA station brings Smart Underwear research to southwest Georgia audience via CNN Newsource.</p>
                     </div>
                 </div>
-                <!-- Placeholder -->
-                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px dashed #ccc; display: flex; align-items: center; justify-content: center;">
-                    <div style="text-align: center; color: #999;">
-                        <p style="margin: 0; font-size: 1.2rem;">📺</p>
-                        <p style="margin: 5px 0; font-size: 0.9rem;">Coming Soon</p>
-                        <p style="margin: 0; font-size: 0.8rem;">CNN Station</p>
+                <!-- Fox 8 Live New Orleans -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 Fox 8 Live New Orleans</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> New Orleans, LA station brings Smart Underwear research to Gulf Coast audience via CNN Newsource.</p>
                     </div>
                 </div>
-                <!-- Placeholder -->
-                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px dashed #ccc; display: flex; align-items: center; justify-content: center;">
-                    <div style="text-align: center; color: #999;">
-                        <p style="margin: 0; font-size: 1.2rem;">📺</p>
-                        <p style="margin: 5px 0; font-size: 0.9rem;">Coming Soon</p>
-                        <p style="margin: 0; font-size: 0.8rem;">CNN Station</p>
+                <!-- KOLO Reno -->
+                <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #cc0000;">
+                    <h3 style="color: #cc0000; margin-top: 0; font-size: 1.3rem; font-weight: bold;">📺 KOLO Reno</h3>
+                    <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 18, 2026</p>
+                    <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">CNN Newsource</p>
+                    <div style="margin-top: 10px; padding: 10px; background-color: #d1ecf1; border-radius: 6px; border-left: 3px solid #17a2b8;">
+                        <p style="margin: 0; font-size: 0.75rem; color: #0c5460;"><strong>CNN Reach:</strong> Reno, NV station brings Smart Underwear research to Nevada audience via CNN Newsource.</p>
                     </div>
                 </div>
             </div>
