--- a/cnn-map.html
+++ b/cnn-map.html
@@ -87,7 +87,7 @@
 
         <div class="stats-bar">
             <div class="stat-box">
-                <span class="number">49</span>
+                <span class="number">51</span>
                 <span class="label">TV Stations</span>
             </div>
             <div class="stat-box">
@@ -110,7 +110,7 @@
         <div style="display: flex; justify-content: center; gap: 30px; margin: 20px 0; padding: 15px; background-color: #f8f9fa; border-radius: 8px; border: 1px solid #ddd;">
             <div style="display: flex; align-items: center; gap: 8px;">
                 <div style="background-color: #cc0000; width: 12px; height: 12px; border-radius: 50%; border: 2px solid white; box-shadow: 0 0 3px rgba(0,0,0,0.3);"></div>
-                <span style="font-size: 0.85rem; color: #333;">CNN Newsource (39 stations)</span>
+                <span style="font-size: 0.85rem; color: #333;">CNN Newsource (41 stations)</span>
             </div>
             <div style="display: flex; align-items: center; gap: 8px;">
                 <div style="background-color: #ff6b6b; width: 12px; height: 12px; border-radius: 50%; border: 2px solid white; box-shadow: 0 0 3px rgba(0,0,0,0.3);"></div>
@@ -175,7 +175,9 @@
             { name: "10News San Diego", city: "San Diego, CA", lat: 32.7157, lng: -117.1611, url: "https://www.10news.com/news/fact-or-fiction/fact-or-fiction-scientists-design-smart-underwear-to-track-flatulence" },
             { name: "The Georgia Sun", city: "Georgia", lat: 32.1656, lng: -82.9001, url: "https://thegeorgiasun.com/health/researchers-in-maryland-create-smart-underwear-to-find-out-how-much-you-fart" },
             { name: "WTOL Toledo", city: "Toledo, OH", lat: 41.6528, lng: -83.5379, url: "https://www.wtol.com/video/news/weird/smarty-pants-researchers-develop-intelligent-underwear-to-measure-your-farts/512-f3cd54d7-8f65-4c51-a5d4-67b5fd9f5faa" },
-            { name: "WRIF Detroit", city: "Detroit, MI", lat: 42.3314, lng: -83.0458, url: "https://wrif.com/2026/02/11/scientists-develop-smart-underwear-that-tracks-bacteria-by-measuring-farts/" }
+            { name: "WRIF Detroit", city: "Detroit, MI", lat: 42.3314, lng: -83.0458, url: "https://wrif.com/2026/02/11/scientists-develop-smart-underwear-that-tracks-bacteria-by-measuring-farts/" },
+            { name: "Fox 8 Live New Orleans", city: "New Orleans, LA", lat: 29.9511, lng: -90.0715, url: "https://www.fox8live.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
+            { name: "KOLO Reno", city: "Reno, NV", lat: 39.5296, lng: -119.8138, url: "https://www.kolotv.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" }
         ];
 
         // Initialize map centered on continental US
