--- a/cnn-hits.html
+++ b/cnn-hits.html
@@ -51,6 +51,7 @@
     
     <div class="container">
         <a href="index.html" class="back-button">← Back to Main</a>
+        <a href="radio-tv-interviews.html" class="back-button">🎙️ Radio & TV Interviews</a>
         
         <!-- CNN Coverage Map Banner -->
         <div style="background: linear-gradient(135deg, #cc0000, #990000); border-radius: 10px; padding: 25px; margin-bottom: 30px; text-align: center; color: white;">
