--- a/index.html
+++ b/index.html
@@ -322,6 +322,8 @@
             <h2>⚡ Quick Hits</h2>
             
             <div style="display: flex; justify-content: center; gap: 12px; margin: 20px 0; flex-wrap: wrap;">
+                <a href="cnn-hits.html" class="back-button">📺 CNN Coverage Map</a>
+                <a href="radio-tv-interviews.html" class="back-button">🎙️ Radio & TV Interviews</a>
                 <a href="cnn-hits.html" style="display: block; background-color: #cc0000; color: white; text-align: center; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: bold; font-size: 0.9rem; transition: background-color 0.3s; min-width: 160px;">
                     📺 CNN News Service
                 </a>
