--- a/cnn-map.html
+++ b/cnn-map.html
@@ -10,11 +10,11 @@
         body { font-family: 'Helvetica', sans-serif; margin: 0; padding: 0; background-color: #f0f4f8; color: #1a2a3a; }
 
         header {
-            background-color: #4169E1;
+            background: linear-gradient(135deg, #4169E1, #008b8b);
             color: white;
-            padding: 1.5rem 1rem;
+            padding: 40px 20px;
             text-align: center;
-            border-bottom: 6px solid #00FFFF;
+            border-radius: 0 0 20px 20px;
         }
         header h1 { font-size: 2.2rem; margin-bottom: 0.3rem; }
         header p { font-size: 1.1rem; font-weight: 600; margin: 0; }
