--- a/feature-archive.html
+++ b/feature-archive.html
@@ -6,11 +6,11 @@
         body { font-family: 'Helvetica', sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f0f4f8; color: #1a2a3a; }
         
         header { 
-            background-color: #6c757d; /* Gray */
+            background: linear-gradient(135deg, #4169E1, #008b8b);
             color: white; 
-            padding: 1.5rem 1rem; 
+            padding: 40px 20px; 
             text-align: center; 
-            border-bottom: 6px solid #495057; /* Dark Gray Accent */
+            border-radius: 0 0 20px 20px; 
         }
         
         header h1 { font-size: 2.5rem; margin-bottom: 0.5rem; }
