Fix Fox 32 Chicago video player - replace broken iframe with clickable card

--- a/radio-tv-interviews.html
+++ b/radio-tv-interviews.html
@@ -272,9 +272,16 @@
                 <strong><a href="https://www.fox32chicago.com/video/fmc-xtat3xcykjqq3ptp" target="_blank" style="font-size: 1.1rem; color: #4169E1;">Fox 32 Chicago covers Smart Underwear research</a></strong>
             </div>
             
-            <div style="video-container" style="margin-bottom: 15px;">
-                <iframe src="https://www.fox32chicago.com/video/fmc-xtat3xcykjqq3ptp" frameborder="0" allowfullscreen></iframe>
-            </div>
+            <div style="text-align: center; margin: 15px 0;">
+                    <a href="https://www.fox32chicago.com/video/fmc-xtat3xcykjqq3ptp" target="_blank" style="display: inline-block;">
+                        <div style="background: linear-gradient(135deg, #4169E1, #008b8b); color: white; padding: 40px 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); min-width: 300px;">
+                            <div style="font-size: 3rem; margin-bottom: 10px;">🦊</div>
+                            <div style="font-size: 1.2rem; font-weight: bold;">Fox 32 Chicago</div>
+                            <div style="font-size: 0.9rem; margin-top: 5px;">Smart Underwear coverage</div>
+                            <div style="font-size: 0.8rem; margin-top: 10px; opacity: 0.9;">Click to watch on Fox 32</div>
+                        </div>
+                    </a>
+                </div>
             
             <div style="font-style: italic; color: #333; font-size: 0.8rem; line-height: 1.5; text-align: left;">
                 <p style="margin: 0;">"Chicago's Fox 32 covers the University of Maryland's Smart Underwear research, bringing scientific innovation to local television audience and highlighting the groundbreaking study's findings."</p>
