Make country codes smaller to avoid confusion with publication names

--- a/radio-tv-interviews.html
+++ b/radio-tv-interviews.html
@@ -307,7 +307,7 @@
             
             <!-- CBC "As It Happens" -->
             <div style="flex: 1; background-color: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #4169E1;">
-                <h3 style="color: #4169E1; margin-top: 0; font-size: 1.4rem; font-weight: bold;">🇨🇦 CBC "As It Happens"</h3>
+                <h3 style="color: #4169E1; margin-top: 0; font-size: 1.4rem; font-weight: bold;"><span style="font-size: 0.7rem; opacity: 0.8;">[CA]</span> CBC "As It Happens"</h3>
                 <p style="color: #666; font-size: 0.8rem; margin-bottom: 5px;">February 13, 2026</p>
                 <p style="color: #666; font-size: 0.7rem; margin-bottom: 10px;">National Radio • Canada</p>
                 
